samples/_failures_safe/1761693045_763aab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f320f1cc.c: In function ‘main’:
./samples/SAFE/__tmp_f320f1cc.c:145:12: error: missing terminating " character
  145 |     printf("Compressed data (%zu
      |            ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f320f1cc.c:145:5: error: expected expression at end of input
  145 |     printf("Compressed data (%zu
      |     ^~~~~~
./samples/SAFE/__tmp_f320f1cc.c:145:5: error: expected declaration or statement at end of input
